--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,23 @@
-.App {
+
+
+.rotated__title {
   text-align: center;
+} 
+
+.rotated__title p {
+  font-size: 80px;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  writing-mode: vertical-rl;
+  text-orientation: unset;
+  transform: rotate(-180deg);
+} 
+
+.app {
+  height: 100%;
 }
+
 
 .App-logo {
   height: 40vmin;
@@ -17,6 +34,107 @@
   color: white;
 }
 
+
 .App-link {
   color: #09d3ac;
+}
+
+.container {
+  display: flex;
+  height: 100%;
+  color: #000;
+}
+
+.wrapper {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.socket_informer {
+  display: flex;
+  width: 100%;
+  max-height: 100px;
+  overflow: auto;
+  background-color: #F9F9F9;
+}
+
+.socket_informer__messages {
+  padding: 8px;
+  width: 100%;
+}
+
+.socket_informer__message {
+  display: flex;
+}
+
+.socket_informer__message + .socket_informer__message {
+	margin-top: 8px;
+}
+
+.socket_informer__message .message__label {
+  color: #676767;
+}
+
+.socket_informer__message .message__value {
+  font-weight: bold;
+}
+
+.socket_informer__message .message_status .status_type_success {
+  color: #4F9A5B;
+}
+
+.socket_informer__message .message_status .status_type_fail {
+  color: #EE0D0D;
+}
+
+.dialog {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.dialog__list {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  padding: 0 5px;
+}
+
+.message__text {
+  max-width: 50%;
+  background-color: #EBEBEB;
+  padding: 12px 24px;
+  border-radius: 8px;
+  align-self: flex-end;
+  margin: 8px;
+}
+
+.message__text.me {
+  align-self: flex-start;
+  background-color: #09d3ac;
+}
+
+
+.control {
+  height: 100px;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.control__input {
+  width: 100%;
+  font-size: 18px;
+  padding: 12px 24px 12px 8px;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid #EBEBEB;
+}
+
+.control__input:focus {
+  border-bottom: 1px solid #09d3ac;
 }
